--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,8 @@
+@import '@radix-ui/colors/blackA.css';
+@import '@radix-ui/colors/mauve.css';
+@import '@radix-ui/colors/red.css';
+@import '@radix-ui/colors/violet.css';
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -89,7 +94,7 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: var(--violet11);
   background: linear-gradient(
       to bottom,
       transparent,
@@ -239,4 +244,35 @@ input {
 }
 .Button.green:focus {
   box-shadow: 0 0 0 2px var(--green7);
+}
+.Button.violet {
+  background-color: white;
+  color: var(--violet11);
+  box-shadow: 0 2px 10px var(--blackA7);
+}
+.Button.violet:hover {
+  background-color: var(--mauve3);
+}
+.Button.violet:focus {
+  box-shadow: 0 0 0 2px black;
+}
+.Button.red {
+  background-color: var(--red4);
+  color: var(--red11);
+}
+.Button.red:hover {
+  background-color: var(--red5);
+}
+.Button.red:focus {
+  box-shadow: 0 0 0 2px var(--red7);
+}
+.Button.mauve {
+  background-color: var(--mauve4);
+  color: var(--mauve11);
+}
+.Button.mauve:hover {
+  background-color: var(--mauve5);
+}
+.Button.mauve:focus {
+  box-shadow: 0 0 0 2px var(--mauve7);
 }
