--- a/src/styles/tab.module.css
+++ b/src/styles/tab.module.css
@@ -2,12 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
 }
 
-.TabWrapper img {
-  width: 100%;
-  height: 100%;
-  max-height: 400px;
-  max-width: fit-content;
-}
